--- a/HW1/calandar.css
+++ b/HW1/calandar.css
@@ -21,11 +21,27 @@ table #Saturday ,#cell_7 ,#cell_14 ,#cell_21 ,#cell_28 ,#cell_35, #cell_42{
   color: blue;
 }
 
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+
+  overflow: visible;
+  table-layout: fixed;
+
+
 }
+
 th, td {
   padding: 15px;
   text-align: center;
+  overflow: visible;
+}
+
+td {
+  width: 50px;
+  height: 50px;
+  overflow: visible;
+  table-layout: fixed;
+
 }
