--- a/HW1/calandar.css
+++ b/HW1/calandar.css
@@ -83,3 +83,19 @@ div.add_schedule_window {
   line-height: 200%;
 
 }
+
+div.edit_schedule_window {
+  position: absolute;
+  top: 250px;
+  left: 250px;
+  /* width: 200px; */
+  /* height: 100px; */
+  border: 3px solid black;
+  background-color: #FFFFFF;
+  color: red;
+  display: none;
+  padding: 10px;
+  text-align: center;
+  line-height: 200%;
+
+}
