--- a/HW1/calandar.css
+++ b/HW1/calandar.css
@@ -77,7 +77,7 @@ div.add_schedule_window {
   /* height: 100px; */
   border: 3px solid black;
   background-color: #FFFFFF;
-  color: red;
+  color: #000000;
   display: none;
   padding: 10px;
   text-align: center;
@@ -95,7 +95,7 @@ div.edit_schedule_window {
   /* height: 100px; */
   border: 3px solid black;
   background-color: #FFFFFF;
-  color: red;
+  color: #000000;
   display: none;
   padding: 10px;
   text-align: center;
