--- a/TermProject_solitaire/solitaire.css
+++ b/TermProject_solitaire/solitaire.css
@@ -11,7 +11,6 @@
     background-color: rgb(0, 80, 0);
     width: 100px;
     height: 125px;
-    margin: 15px auto;
 }   
 
 .card_normal{
@@ -20,12 +19,14 @@
   
   width: 100px;
   height: 125px;
-  margin: 15px auto;
 }
 
 .card_empty{
     width: 100px;
     height: 125px;
-    margin: 15px auto;
   
+}
+
+#table1 {
+    border-spacing: 15px;
 }
