--- a/TermProject_solitaire/solitaire.css
+++ b/TermProject_solitaire/solitaire.css
@@ -11,6 +11,7 @@
     background-color: rgb(0, 80, 0);
     width: 100px;
     height: 125px;
+    background-image: url("data/1_1.jpg")
 }   
 
 .card_normal{
@@ -29,4 +30,16 @@
 
 #table1 {
     border-spacing: 15px;
+}
+
+#win_window {
+    width: 300px;
+    height: 500px;
+    position: fixed;
+    left: 250px;
+    top: 250px;
+    background-color: dodgerblue;
+    padding: 20px;
+    line-height: 40px;
+    display: none;
 }
