서버에 저장이 늦게되는 현상.. 걍 제출할거야

--- a/HW2/hw2_sche.css
+++ b/HW2/hw2_sche.css
@@ -50,3 +50,17 @@ table, td, tr{
     line-height: 40px;
     display: none;
 }
+
+#wait_window {
+
+    width: 300px;
+    height: auto;
+    position: fixed;
+    left: 250px;
+    top: 200px;
+    background-color: dodgerblue;
+    padding: 20px;
+    line-height: 40px;
+    display: none;
+    
+}
