--- a/TermProject_solitaire/solitaire.css
+++ b/TermProject_solitaire/solitaire.css
@@ -11,7 +11,7 @@
     background-color: rgb(0, 80, 0);
     width: 100px;
     height: 125px;
-    background-image: url("data/1_1.jpg")
+    background-image: url("data/1_1.jpg");
 }   
 
 .card_normal{
@@ -42,4 +42,13 @@
     padding: 20px;
     line-height: 40px;
     display: none;
+}
+
+.card {
+    border-radius: 6px;
+    border: 2px solid rgb(40, 59, 13);
+    background-color: rgb(0, 80, 0);
+    width: 100px;
+    height: 125px;
+    background-image: url("data/1_1.jpg");
 }
