--- a/TermProject_solitaire/solitaire.css
+++ b/TermProject_solitaire/solitaire.css
@@ -14,6 +14,26 @@
     /* background-image: url("data/1_1.jpg"); */
 }   
 
+#result1 {
+    background-image: url("data/1_1_background.jpg");
+    opacity: 0.5;
+}
+
+#result2 {
+    background-image: url("data/2_1_background.jpg");
+    opacity: 0.5;
+}
+
+#result3 {
+    background-image: url("data/3_1_background.jpg");
+    opacity: 0.5;
+}
+
+#result4 {
+    background-image: url("data/4_1_background.jpg");
+    opacity: 0.5;
+}
+
 .card_normal{
   border-radius: 6px;
   border: 2px solid rgb(40, 59, 13);
